tests/NormalTests/paczka1/fuzzy1/50274870.err
Error in line 1: WAVycr A15 6,1
Error in line 12: znykT S962 42,19
Error in line 17: WAVycr S962 85,1
Error in line 36: WAVycr A911 28,6
